[workspace]
members = [
  "bevy_wasm",
  "bevy_wasm_shared",
  "bevy_wasm_sys",
  "bevy_wasm_sys_core",
  "examples/cubes/cubes",
  "examples/cubes/cubes_protocol",
  "examples/cubes/mod_with_bevy",
  "examples/cubes/mod_without_bevy",
  "examples/simple/simple",
  "examples/simple/simple_mod",
  "examples/simple/simple_protocol",
  "examples/shared_resources/shared_resources",
  "examples/shared_resources/shared_resources_mod",
  "examples/shared_resources/shared_resources_protocol",
]
resolver = "2"

[workspace.dependencies]
# Project dependencies
bevy_wasm = { path = "bevy_wasm" }
bevy_wasm_shared = { path = "bevy_wasm_shared" }
bevy_wasm_sys_core = { path = "bevy_wasm_sys_core" }
bevy_wasm_sys = { path = "bevy_wasm_sys" }
cubes_protocol = { path = "examples/cubes/cubes_protocol" }
simple_protocol = { path = "examples/simple/simple_protocol" }
shared_resources_protocol = { path = "examples/shared_resources/shared_resources_protocol" }

# External dependencies
anyhow = "1.0"
bevy = { version = "0.13.2", default-features = false, features = [
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_text",
  "bevy_ui",
  "png",
  "bevy_gizmos",
  "tonemapping_luts",
  "default_font",
] }
bincode = "1.3"
colored = "2.1"
getrandom = "0.2.12"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.57"
tracing = "0.1"
wasi-common = "19.0.2"
wasm-bindgen = "0.2"
wasmtime = "19"
web-sys = "0.3"

[profile.release-wasm]
debug = false
inherits = "release"
lto = true
opt-level = 's'
panic = "abort"
strip = true
